--- a/app/views/computers/_list.html.erb
+++ b/app/views/computers/_list.html.erb
@@ -1,32 +1,26 @@
 <div>
   <table>
     <tr>
-      <th>Pc</th>
-      <th>Mac</th>
-      <th>Ip</th>
-      <th><%= t 'computers.available' %></th>
-      <th>MBoard</th>
-      <th><%= t 'computers.harddisk' %></th>
-      <th><%= t 'computers.memory' %></th>
-      <th>Cd</th>
-      <th>Dvd</th>
-      <th><%= t 'computers.place' %></th>
-      <th><%= t 'computers.workstation?' %></th>
+      <%= content_tag('th', 'Pc') %>
+      <%= content_tag('th', 'Mac') %>
+      <%= content_tag('th', 'Ip') %>
+      <%= content_tag('th', t('computers.available')) %>
+      <%= content_tag('th', 'Cd') %>
+      <%= content_tag('th', 'Dvd') %>
+      <%= content_tag('th', t('computers.place')) %>
+      <%= content_tag('th', t('computers.workstation?')) %>
       <th colspan='3'><%= t 'common-actions.actions' %></th>
     </tr>
     <% for computer in @computers %>
     <tr  class="<%= cycle("rowA","rowB") %>">
-      <td><%= computer.name %></td>
-      <td><%= computer.mac %></td>
-      <td><%= computer.ip %></td>
-      <td><%= check(computer.available) %></td>
-      <td><%= computer.mother_board.title rescue nil %></td>
-      <td><%= computer.harddisk.collect {|x| x.model + '<br>' } rescue nil %></td>
-      <td><%= computer.memory.collect {|x| x.model + '<br>' } rescue nil %></td>
-      <td><%= computer.cd.collect {|x| x.model + '<br>' } rescue nil %></td>
-      <td><%= computer.dvd.collect {|x| x.model + '<br>' } rescue nil %></td>
-      <td><%= computer.place.title rescue nil %></td>
-      <td><%= in_workstation?(computer ) %></td>
+      <%= content_tag('td', computer.name) %>
+      <%= content_tag('td', computer.ip) %>
+      <%= content_tag('td', computer.mac) %>
+      <%= content_tag('td', check(computer.available)) %>
+      <%= content_tag('td', computer.cd.collect {|x| x.model + '<br>' } ) rescue nil%>
+      <%= content_tag('td', computer.dvd.collect {|x| x.model + '<br>' } ) rescue nil %>
+      <%= content_tag('td', computer.place.title ) rescue nil%>
+      <%= content_tag('td', in_workstation?(computer )) %>
       <td><%= link_to t('common-actions.show') , computer %></td>
       <td><%= link_to t('common-actions.edit') , edit_computer_path(computer) %></td>
       <td><%= link_to t('common-actions.destroy') , computer, :confirm => 'Are you sure?', :method => :delete %></td>
