--- a/app/views/harddisks/_list.html.erb
+++ b/app/views/harddisks/_list.html.erb
@@ -11,7 +11,7 @@
     <td><%= harddisk.model %></td>
     <td><%= harddisk.serialnumber %></td>
     <td><%= harddisk.mark.name rescue nil  %></td>
-    <td><%= harddisk.computer.name rescue nil  %></td>
+    <td><%= link_to(harddisk.computer.name , 'computers/' + harddisk.computer.id.to_s)  rescue nil%></td>
     <td><%= link_to t('common-actions.show'), harddisk %></td>
     <td><%= link_to t('common-actions.edit'), edit_harddisk_path(harddisk) %></td>
     <td><%= link_to t('common-actions.destroy'), harddisk, :confirm => 'Are you sure?', :method => :delete %></td>
