--- a/app/views/dvds/_list.html.erb
+++ b/app/views/dvds/_list.html.erb
@@ -2,18 +2,18 @@
   <tr>
     <th><%= t('dvds.model') %></th>
     <th><%= t('dvds.sn') %></th>
+    <th><%= t('dvds.mark') %></th>
     <th><%= t('dvds.burn') %></th>
     <th>Pc</th>
-    <th><%= t('dvds.mark') %></th>
     <th colspan='3'><%= t('common-actions.actions') %></th>
   </tr>
 <% for dvd in @dvds %>
   <tr  class="<%= cycle("rowA","rowB") %>">
     <td><%= dvd.model %></td>
     <td><%= dvd.serialnumber %></td>
-    <td><%= check(dvd.writable) %></td>
-    <td><%= dvd.computer.name rescue nil  %></td>
     <td><%= dvd.mark.name rescue nil  %></td>
+    <td><%= check(dvd.writable) %></td>
+    <td><%= link_to(dvd.computer.name , 'computers/' + dvd.computer.id.to_s)  rescue nil%></td>
     <td><%= link_to t('common-actions.show'), dvd %></td>
     <td><%= link_to t('common-actions.edit'), edit_dvd_path(dvd) %></td>
     <td><%= link_to t('common-actions.destroy'), dvd, :confirm => 'Are you sure?', :method => :delete %></td>
