--- a/app/views/computers/_computer_info.html.erb
+++ b/app/views/computers/_computer_info.html.erb
@@ -9,10 +9,16 @@
   <%= content_tag('th', 'Motherboard : ') %>
                  <%= @computer.mother_board.title  rescue nil%>
                  <%= content_tag('br') %>
+
+  <%= content_tag('th', t('computers.harddisk')) %>
+                 <%= @computer.harddisk.collect {|x| x.model + '<br>' }  rescue nil%>
+
   <%= content_tag('th', t('computers.memory')) %>
                  <%= @computer.memory.collect {|x| x.model + '<br>' }  rescue nil %>
+
   <%= content_tag('th', 'Cd :') %>
                  <%= @computer.cd.collect {|x| x.model + '<br>' }  rescue nil %>
+
   <%= content_tag('th', 'Dvd :') %>
                  <%= @computer.dvd.collect {|x| x.model + '<br>' }  rescue nil %>
 
