- Partials   * added html text tag for size field in harddisks and memories   * added data of size field for memories and hardisks in computer     info

--- a/app/views/computers/_computer_info.html.erb
+++ b/app/views/computers/_computer_info.html.erb
@@ -11,10 +11,10 @@
                  <%= content_tag('br') %>
 
   <%= content_tag('th', t('computers.harddisk')) %>
-                 <%= @computer.harddisk.collect {|x| x.model + '<br>' }  rescue nil%>
+                 <%= @computer.harddisk.collect {|x| x.model + ' ' + x.size.to_s + '<br>' }  rescue nil%>
 
   <%= content_tag('th', t('computers.memory')) %>
-                 <%= @computer.memory.collect {|x| x.model + '<br>' }  rescue nil %>
+                 <%= @computer.memory.collect {|x| x.model +  ' ' + x.size.to_s + '<br>' }  rescue nil %>
 
   <%= content_tag('th', 'Cd :') %>
                  <%= @computer.cd.collect {|x| x.model + '<br>' }  rescue nil %>
