--- a/app/views/harddisks/_form.html.erb
+++ b/app/views/harddisks/_form.html.erb
@@ -4,13 +4,32 @@
   <%= t('harddisks.model') %>
   <%= f.text_field :model %>
 
+    <% 2.times do %>
+    <br>
+    <%  end %>
+
   <%= t('harddisks.sn') %>
   <%= f.text_field :serialnumber %>
+
+    <% 2.times do %>
+    <br>
+    <%  end %>
+
+  <%= f.label 'size' %>
+  <%= f.text_field :size %>
+
+    <% 2.times do %>
+    <br>
+    <%  end %>
 
   <div id="quarter" >
   <%= collection_select 'harddisk', 'computer_id', Computer.find(:all), 'id', 'name',
       {:prompt => true} %>
   </div>
+
+    <% 2.times do %>
+    <br>
+    <%  end %>
 
   <div id="quarter" >
   <%= collection_select 'harddisk', 'mark_id', Mark.find(:all), 'id', 'name',
