--- a/app/views/harddisks/_list.html.erb
+++ b/app/views/harddisks/_list.html.erb
@@ -3,6 +3,7 @@
     <th><%= t('harddisks.model') %></th>
     <th><%= t('harddisks.sn') %></th>
     <th><%= t('harddisks.mark') %></th>
+    <th><%= t('harddisks.size') %></th>
     <th>Pc</th>
     <th colspan='3'><%= t('common-actions.actions') %></th>
   </tr>
@@ -11,6 +12,7 @@
     <td><%= harddisk.model %></td>
     <td><%= harddisk.serialnumber %></td>
     <td><%= harddisk.mark.name rescue nil  %></td>
+    <td><%= harddisk.size rescue nil  %></td>
     <td><%= link_to(harddisk.computer.name , 'computers/' + harddisk.computer.id.to_s)  rescue nil%></td>
     <td><%= link_to t('common-actions.show'), harddisk %></td>
     <td><%= link_to t('common-actions.edit'), edit_harddisk_path(harddisk) %></td>
