--- a/app/views/workstations/_list.html.erb
+++ b/app/views/workstations/_list.html.erb
@@ -11,12 +11,12 @@
   <% @c = Computer.find(workstation.computer_id).name rescue nil %>
   <% @s = Screen.find(workstation.screen_id).model rescue nil %>
   <% @p = Printer.find(workstation.printer_id).model  rescue nil %>
-  <% @place = Place.find(workstation.place_id).title  rescue nil %>
+  <% @place = Place.find(workstation.place_id)  rescue nil %>
   <tr  class="<%= cycle("rowA","rowB") %>">
     <td><%= @c rescue nil  %></td>
     <td><%= @s rescue nil  %></td>
     <td><%= @p rescue nil  %></td>
-    <td><%= @place rescue nil  %></td>
+    <%= content_tag('td', link_to(@place.title, 'places/' + @place.id.to_s) ) rescue nil%>
     <td><%= link_to t('common-actions.edit') , edit_workstation_path(workstation) %></td>
     <td><%= link_to t('common-actions.destroy'), workstation, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
