--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,3 +1,3 @@
 <%= render :partial => 'list' %>
 
-<%= link_to 'New company', new_company_path %>
+<%= link_to t('company.new'), new_company_path %>
