- Controllers   * changes in layout to display
- Views and partials
  * added translations

- Locales
  * added new translations

--- a/app/views/bills/edit.html.erb
+++ b/app/views/bills/edit.html.erb
@@ -1,4 +1,4 @@
 <%= render :partial => 'form'  %>
 
-<%= link_to 'Show', @bill %> |
-<%= link_to 'Back', bills_path %>
+<%= link_to t('bill.show'), @bill %> |
+<%= link_to t('bill.back'), bills_path %>
