--- a/app/views/bills/_form.html.erb
+++ b/app/views/bills/_form.html.erb
@@ -10,7 +10,10 @@
     <%= f.text_field :code %>
   </p>
 
-  <p>
-    <%= f.submit "Create" %>
-  </p>
+  <% if action_name == 'new' %>
+  <%= f.submit t('bill.create') %>
+  <% else %>
+  <%= f.submit t('bill.edit') %>
+  <% end %>
+
 <% end %>
