--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -1,3 +1,3 @@
 
-<%= link_to 'Edit', edit_bill_path(@bill) %> |
-<%= link_to 'Back', bills_path %>
+<%= link_to t('bill.edit'), edit_bill_path(@bill) %> |
+<%= link_to t('bill.back'), bills_path %>
