--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -513,20 +513,20 @@ div.auto_complete ul strong.highlight {
 body {
         font-family: Arial, Helvetica, sans-serif;
         margin: 0;
-        padding: 0;
+        padding: 30px;
         }
 #marco {
         width:700px;
-        margin:10px 0;
+        margin:1px 1px 0px 20px;
         padding:0px;
         text-align:left;
         padding: 1.0em 5.5em 0em 2em;
-        }
+}
 
 .preload2
 .menu2 {color: #fff; padding:0; margin:0; margin-bottom:0; list-style:none; height:25px; position:relative; font-family:arial, verdana, sans-serif;}
 .menu2 li.top {display:block; float:left; position:relative;}
-.menu2 li a.top_link {display:block; float:left; height:25px; margin-left:6px; line-height:25px; color:#fff; text-decoration:none; font-size:11px; font-weight:bold; padding:0 0 0 6px; cursor:pointer;}
+.menu2 li a.top_link {display:block; float:left; height:25px; margin-left:0px; line-height:25px; color:#fff; text-decoration:none; font-size:11px; font-weight:bold; padding:0 0 0 6px; cursor:pointer;}
 .menu2 li a.top_link span {float:left; display:block; padding:0 10px 0 6px; height:40px;}
 .menu2 li a.top_link span.down {float:left; display:block; padding:0 10px 0 6px; height:25px;}
 .menu2 li a.top_link:hover {color: #FFF;background: #CA2F2F url('../images/n3.gif') repeat-x;font-size: 11px; font-weight: bold;}
