--- a/app/views/screens/_list.html.erb
+++ b/app/views/screens/_list.html.erb
@@ -5,6 +5,7 @@
     <th><%= t('screens.mark') %></th>
     <th>Place</th>
     <th><%= t('screens.workstation?') %></th>
+    <th><%= t('screens.bill') %></th>
     <th colspan='3'><%= t('common-actions.actions') %></th>
   </tr>
 <% for screen in @screens %>
@@ -14,6 +15,7 @@
     <td><%= screen.mark.name rescue nil  %></td>
     <%= content_tag('td', link_to(screen.place.title, 'places/' + screen.place.id.to_s) ) rescue nil%>
     <td><%= screen.is_part_of_a_workstation rescue nil %></td>
+    <td><%= link_to t('screens.bill'), 'bills/'+ screen.bill_id.to_s %></td>
     <td><%= link_to t('common-actions.show'), screen %></td>
     <td><%= link_to t('common-actions.edit'), edit_screen_path(screen) %></td>
     <td><%= link_to t('common-actions.destroy'), screen, :confirm => 'Are you sure?', :method => :delete %></td>
