- Partials and views   * done translations   * added data to show in idem view name

--- a/app/views/bills/_list.html.erb
+++ b/app/views/bills/_list.html.erb
@@ -1,6 +1,6 @@
 <table>
   <% content_tag :tr do %>
-  <%= content_tag('th', t('bill.company')) %>
+  <%= content_tag('th', t('bill.code')) %>
   <%= content_tag('th', t('bill.company')) %>
   <th colspan='3'><%= t 'common-actions.actions' %></th>
   <% end %>
