--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -120,12 +120,12 @@
 
       <li class="top">
         <a href="/bills/" id="telmex" class="top_link">
-          <span class="down"><%= 'Facturas' %></span>
+          <span class="down"><%= t 'menu.bills' %></span>
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
-          <li><a href="/bills/"><%= 'Facturas' %></a></li>
-          <li><a href="/bills/new"><%= 'Nueva' %></a></li>
+          <li><a href="/bills/"><%= t 'menu.bills' %></a></li>
+          <li><a href="/bills/new"><%= t 'menu.bill-new' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
