--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -107,13 +107,25 @@
       </li>
 
       <li class="top">
-        <a href="/companies/list" id="telmex" class="top_link">
+        <a href="/companies/" id="telmex" class="top_link">
           <span class="down"><%= t 'menu.companies' %></span>
           <!--[if gte IE 7]><!--></a><!--<![endif]-->
         <!--[if lte IE 6]><table><tr><td><![endif]-->
         <ul class="sub">
           <li><a href="/companies/"><%= t 'menu.list-companies' %></a></li>
           <li><a href="/companies/new"><%= t 'menu.company-new' %></a></li>
+        </ul>
+        <!--[if lte IE 6]></td></tr></table></a><![endif]-->
+      </li>
+
+      <li class="top">
+        <a href="/bills/" id="telmex" class="top_link">
+          <span class="down"><%= 'Facturas' %></span>
+          <!--[if gte IE 7]><!--></a><!--<![endif]-->
+        <!--[if lte IE 6]><table><tr><td><![endif]-->
+        <ul class="sub">
+          <li><a href="/bills/"><%= 'Facturas' %></a></li>
+          <li><a href="/bills/new"><%= 'Nueva' %></a></li>
         </ul>
         <!--[if lte IE 6]></td></tr></table></a><![endif]-->
       </li>
