- Models   * added relationships between bill model and all the model
- Views and forms
  * added code bill field in forms and list

- Locales
  * added new translations

--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -16,6 +16,12 @@
 
   <%= collection_select 'cd', 'mark_id', Mark.find(:all), 'id', 'name',
       {:prompt => true} %>
+
+  <div id="quarter" >
+    <%= t 'bill.code' %>
+    <%= collection_select 'cd', 'bill_id', Bill.find(:all), 'id', 'code',
+        {:prompt => true} %>
+  </div >
   <p>
     <% if action_name == 'new' %>
     <%= f.submit t('common-actions.create') %>
