--- a/app/views/dvds/_form.html.erb
+++ b/app/views/dvds/_form.html.erb
@@ -15,6 +15,13 @@
 
   <%= collection_select 'dvd', 'mark_id', Mark.find(:all), 'id', 'name',
       {:prompt => true} %>
+
+  <div id="quarter" >
+    <%= t 'bill.code' %>
+    <%= collection_select 'dvd', 'bill_id', Bill.find(:all), 'id', 'code',
+        {:prompt => true} %>
+  </div >
+
   <p>
     <% if action_name == 'new' %>
     <%= f.submit t('common-actions.create') %>
