--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -1,10 +1,62 @@
 <%= content_tag('label', t('bill.code')) %>
 <%= content_tag('label', @bill.code) %>
 
-<%= content_tag('div') %>
+<% 2.times do %>
+<%= content_tag('br') %>
+<% end %>
 
+<!-- Company name -->
+<% content_tag :div do %>
 <%= content_tag('label', t('bill.company')) %>
 <%= content_tag('label', @bill.companies.collect {|x| x.name.to_s + '<br>' }) %>
+<% end -%>
+
+<% 2.times do %>
+<%= content_tag('br') %>
+<% end %>
+
+<!-- Screens list -->
+<%= content_tag('label', t('menu.screens')) %>
+<% content_tag :div do %>
+<%= content_tag('ul', @bill.screens.collect {|x| x.model.to_s + ' ' + x.serialnumber.to_s + '<br>' }) %>
+<% end -%>
+
+<!-- Printers list -->
+<%= content_tag('label', t('menu.printers')) %>
+<% content_tag :div do %>
+<%= content_tag('ul', @bill.printers.collect {|x| x.model.to_s + ' ' + x.serialnumber.to_s + '<br>' }) %>
+<% end -%>
+
+<!-- Motherboards list -->
+<%= content_tag('label', t('menu.motherboards')) %>
+<% content_tag :div do %>
+<%= content_tag('ul', @bill.mother_boards.collect {|x| x.model.to_s + ' ' + x.serialnumber.to_s + '<br>' }) %>
+<% end -%>
+
+<!-- Harddisks list -->
+<%= content_tag('label', t('menu.harddisks')) %>
+<% content_tag :div do %>
+<%= content_tag('ul', @bill.harddisks.collect {|x| x.model.to_s + ' ' + x.serialnumber.to_s + '<br>' }) %>
+<% end -%>
+
+<!-- Memories list -->
+<%= content_tag('label', t('menu.memories')) %>
+<% content_tag :div do %>
+<%= content_tag ('ul', @bill.memories.collect {|x| x.model.to_s + ' ' + x.size.to_s \
+    + ' ' + x.unit + ' ' + x.serialnumber.to_s + '<br>' }) %>
+<% end -%>
+
+<!-- Cds list -->
+<%= content_tag('label', t('menu.cds')) %>
+<% content_tag :div do %>
+<%= content_tag('ul', @bill.cds.collect {|x| x.model.to_s + ' ' + x.serialnumber.to_s + '<br>' }) %>
+<% end -%>
+
+<!-- Dvds list -->
+<%= content_tag('label', t('menu.dvds')) %>
+<% content_tag :div do %>
+<%= content_tag('ul', @bill.dvds.collect {|x| x.model.to_s + ' ' + x.serialnumber.to_s + '<br>' }) %>
+<% end -%>
 
 <%= link_to t('bill.edit'), edit_bill_path(@bill) %> |
 <%= link_to t('bill.back'), bills_path %>
