- Controllers   * little change fixing something, it needs fix code in create     method
- Models
  * changes in relationship between bill and company models

- Partials and view
  * changes in views and partials to show the new relationships between
    bills and companies

- Migrate
  * added new migration to delete intermediate table
   bills_companies and add field company_id in bills table

--- a/app/views/bills/_form.html.erb
+++ b/app/views/bills/_form.html.erb
@@ -3,7 +3,7 @@
 
   <% content_tag :div, :id => 'quarter' do %>
   <%= t('bill.company') %>
-  <%= collection_select 'company', 'company_id', Company.find(:all), 'id', 'name',
+  <%= collection_select 'bill', 'company_id', Company.find(:all), 'id', 'name',
       {:prompt => true} %>
   <% end %>
 
