--- a/app/views/bills/_list.html.erb
+++ b/app/views/bills/_list.html.erb
@@ -8,7 +8,7 @@
   <% for bill in @bills %>
   <tr>
     <%= content_tag('td', bill.code) %>
-    <%= content_tag('td', bill.companies.collect {|x| x.name.to_s + '<br>' }) %>
+    <%= content_tag('td', bill.company.name) rescue nil %>
     <%= content_tag('td',link_to(t('common-actions.show'), bill)) %>
     <%= content_tag('td',link_to(t('common-actions.edit'), edit_bill_path(bill))) %>
     <%= content_tag('td',link_to(t('common-actions.destroy'), bill, :confirm => 'Are you sure?', :method => :delete)) %>
