- Model   * added method to get company name and bill number
- Partial
  * change in collection select of bill code

- Fixtures
  * deleted bill_id fields of records

--- a/app/views/computers/_form.html.erb
+++ b/app/views/computers/_form.html.erb
@@ -43,7 +43,7 @@
 
   <div id="quarter" >
     <%= t 'bill.code' %>
-    <%= collection_select 'computer', 'bill_id', Bill.find(:all), 'id', 'code',
+    <%= collection_select 'computer', 'bill_id', Bill.find(:all), 'id', :company_bill,
         {:prompt => true} %>
   </div >
 
