--- a/app/views/computers/_list.html.erb
+++ b/app/views/computers/_list.html.erb
@@ -1,19 +1,19 @@
-<div>
-  <table>
-    <tr>
-      <%= content_tag('th', 'Pc') %>
-      <%= content_tag('th', 'Mac') %>
-      <%= content_tag('th', 'Ip') %>
-      <%= content_tag('th', t('computers.memory')) %>
-      <%= content_tag('th', t('computers.harddisk')) %>
-      <%= content_tag('th', 'Cd') %>
-      <%= content_tag('th', 'Dvd') %>
-      <%= content_tag('th', t('computers.place')) %>
-      <%= content_tag('th', t('computers.available')) %>
-      <%= content_tag('th', t('computers.workstation?')) %>
-      <th colspan='3'><%= t 'common-actions.actions' %></th>
-    </tr>
-    <% for computer in @computers %>
+<% content_tag :table do %>
+  <% content_tag :tr do %>
+    <%= content_tag('th', 'Pc') %>
+    <%= content_tag('th', 'Mac') %>
+    <%= content_tag('th', 'Ip') %>
+    <%= content_tag('th', t('computers.memory')) %>
+    <%= content_tag('th', t('computers.harddisk')) %>
+    <%= content_tag('th', 'Cd') %>
+    <%= content_tag('th', 'Dvd') %>
+    <%= content_tag('th', t('computers.place')) %>
+    <%= content_tag('th', t('computers.available')) %>
+    <%= content_tag('th', t('computers.workstation?')) %>
+    <%= content_tag('th', t('computers.bill')) %>
+    <th colspan='3'><%= t 'common-actions.actions' %></th>
+  <% end %>
+  <% for computer in @computers %>
     <tr  class="<%= cycle("rowA","rowB") %>">
       <%= content_tag('td', computer.name) %>
       <%= content_tag('td', computer.mac) %>
@@ -25,10 +25,10 @@
       <%= content_tag('td', link_to(computer.place.title, 'places/' + computer.place.id.to_s) ) rescue nil%>
       <%= content_tag('td', check(computer.available)) %>
       <%= content_tag('td', in_workstation?(computer )) %>
+      <%= content_tag('td', link_to(t('computers.bill'), 'bills/'+ computer.bill_id.to_s)) %>
       <td><%= link_to t('common-actions.show') , computer %></td>
       <td><%= link_to t('common-actions.edit') , edit_computer_path(computer) %></td>
       <td><%= link_to t('common-actions.destroy') , computer, :confirm => 'Are you sure?', :method => :delete %></td>
     </tr>
-    <% end %>
-  </table>
-</div>
+  <% end %>
+<% end %>
