--- a/app/views/mother_boards/_form.html.erb
+++ b/app/views/mother_boards/_form.html.erb
@@ -22,7 +22,7 @@
 
   <div id="quarter" >
     <%= t 'bill.code' %>
-    <%= collection_select 'screen', 'bill_id', Bill.find(:all), 'id', 'code',
+    <%= collection_select 'mother_board', 'bill_id', Bill.find(:all), 'id', :company_bill,
         {:prompt => true} %>
   </div >
 
