--- a/app/views/mother_boards/_list.html.erb
+++ b/app/views/mother_boards/_list.html.erb
@@ -1,20 +1,23 @@
-<table>
-  <tr>
-    <th><%= t('motherboards.model') %></th>
-    <th><%= t('motherboards.sn') %></th>
-    <th><%= t('motherboards.mark') %></th>
-    <th>Pc</th>
+<% content_tag :table do %>
+  <% content_tag :tr do %>
+    <%= content_tag('th',t('motherboards.model')) %>
+    <%= content_tag('th',t('motherboards.sn')) %>
+    <%= content_tag('th',t('motherboards.mark')) %>
+    <%= content_tag('th',t('Pc')) %>
+    <%= content_tag('th', t('motherboards.bill')) %>
     <th colspan='3'><%= t('common-actions.actions') %></th>
-  </tr>
-<% for mother_board in @mother_boards %>
-  <tr  class="<%= cycle("rowA","rowB") %>">
-    <td><%= mother_board.title %></td>
-    <td><%= mother_board.serialnumber %></td>
-    <td><%= mother_board.mark.name rescue nil  %></td>
-    <td><%= link_to(mother_board.computer.name , 'computers/' + mother_board.computer.id.to_s)  rescue nil%></td>
-    <td><%= link_to t('common-actions.show'), mother_board %></td>
-    <td><%= link_to t('common-actions.edit'), edit_mother_board_path(mother_board) %></td>
-    <td><%= link_to t('common-actions.destroy'), mother_board, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
+   <% end -%>
+
+   <% for mother_board in @mother_boards %>
+     <tr  class="<%= cycle("rowA","rowB") %>">
+       <%= content_tag('td',mother_board.title) %>
+       <%= content_tag('td',mother_board.serialnumber) %>
+       <%= content_tag('td',mother_board.mark.name) rescue nil  %>
+       <%= content_tag('td',link_to(mother_board.computer.name , 'computers/' + mother_board.computer.id.to_s))  rescue nil%>
+       <%= content_tag('td', link_to(t('motherboards.bill'), 'bills/'+ mother_board.bill_id.to_s)) %>
+       <%= content_tag('td', link_to(t('common-actions.show'), mother_board)) %>
+       <%= content_tag('td', link_to(t('common-actions.edit'), edit_mother_board_path(mother_board))) %>
+       <%= content_tag('td', link_to(link_to t('common-actions.destroy'), mother_board, :confirm => 'Are you sure?', :method => :delete)) %>
+     </tr>
+   <% end %>
+<% end -%>
