--- a/app/views/harddisks/_form.html.erb
+++ b/app/views/harddisks/_form.html.erb
@@ -41,7 +41,7 @@
 
   <div id="quarter" >
     <%= t 'bill.code' %>
-    <%= collection_select 'harddisk', 'bill_id', Bill.find(:all), 'id', 'code',
+    <%= collection_select 'harddisk', 'bill_id', Bill.find(:all), 'id', :company_bill,
         {:prompt => true} %>
   </div >
 
