--- a/app/views/mother_boards/_list.html.erb
+++ b/app/views/mother_boards/_list.html.erb
@@ -3,7 +3,7 @@
     <%= content_tag('th',t('motherboards.model')) %>
     <%= content_tag('th',t('motherboards.sn')) %>
     <%= content_tag('th',t('motherboards.mark')) %>
-    <%= content_tag('th',t('Pc')) %>
+    <%= content_tag('th','Pc') %>
     <%= content_tag('th', t('motherboards.bill')) %>
     <th colspan='3'><%= t('common-actions.actions') %></th>
    <% end -%>
