- Partials   * added data about bill

--- a/app/views/memories/_form.html.erb
+++ b/app/views/memories/_form.html.erb
@@ -39,7 +39,7 @@
 
   <div id="quarter" >
     <%= t 'menu.bills' %><%= t 'bill.code' %>
-    <%= collection_select 'memory', 'bill_id', Bill.find(:all), 'id', 'code',
+    <%= collection_select 'memory', 'bill_id', Bill.find(:all), 'id', :company_bill,
         {:prompt => true} %>
   </div >
 
